; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wdmaud.drv/extr_mmixer.c_WdmAudInitUserModeMixer.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wdmaud.drv/extr_mmixer.c_WdmAudInitUserModeMixer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMixerLibraryInitialized = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8
@CategoryGuid = common dso_local global i32 0, align 4
@DIGCF_DEVICEINTERFACE = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8
@MixerContext = common dso_local global i32 0, align 4
@Enum = common dso_local global i32 0, align 4
@MM_STATUS_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [44 x i8] c"Failed to initialize mixer library with %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @WdmAudInitUserModeMixer() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = load i64, i64* @MMixerLibraryInitialized, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i64, i64* @TRUE, align 8
  store i64 %7, i64* %1, align 8
  br label %33

8:                                                ; preds = %0
  %9 = load i32, i32* @DIGCF_DEVICEINTERFACE, align 4
  %10 = call i64 @SetupDiGetClassDevs(i32* @CategoryGuid, i32* null, i32* null, i32 %9)
  store i64 %10, i64* %2, align 8
  %11 = load i64, i64* %2, align 8
  %12 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = load i64, i64* @FALSE, align 8
  store i64 %15, i64* %1, align 8
  br label %33

16:                                               ; preds = %8
  %17 = load i32, i32* @Enum, align 4
  %18 = load i64, i64* %2, align 8
  %19 = trunc i64 %18 to i32
  %20 = call i64 @MMixerInitialize(i32* @MixerContext, i32 %17, i32 %19)
  store i64 %20, i64* %3, align 8
  %21 = load i64, i64* %2, align 8
  %22 = call i32 @SetupDiDestroyDeviceInfoList(i64 %21)
  %23 = load i64, i64* %3, align 8
  %24 = load i64, i64* @MM_STATUS_SUCCESS, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %16
  %27 = load i64, i64* %3, align 8
  %28 = call i32 @DPRINT1(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i64 %27)
  %29 = load i64, i64* @FALSE, align 8
  store i64 %29, i64* %1, align 8
  br label %33

30:                                               ; preds = %16
  %31 = load i64, i64* @TRUE, align 8
  store i64 %31, i64* @MMixerLibraryInitialized, align 8
  %32 = load i64, i64* @TRUE, align 8
  store i64 %32, i64* %1, align 8
  br label %33

33:                                               ; preds = %30, %26, %14, %6
  %34 = load i64, i64* %1, align 8
  ret i64 %34
}

declare dso_local i64 @SetupDiGetClassDevs(i32*, i32*, i32*, i32) #1

declare dso_local i64 @MMixerInitialize(i32*, i32, i32) #1

declare dso_local i32 @SetupDiDestroyDeviceInfoList(i64) #1

declare dso_local i32 @DPRINT1(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
